replace with now-php@1.0.0

--- a/vercel.json
+++ b/vercel.json
@@ -1,54 +1,54 @@
 {
     "functions": {
-        "a_propos.php": {"runtime": "vercel-php@o.4.0"},
-        "activite_1_etat.php": {"runtime": "vercel-php@o.4.0"},
-        "bourse.php": {"runtime": "vercel-php@o.4.0"},
-        "capacite.php": {"runtime": "vercel-php@o.4.0"},
-        "citoyen_detail.php": {"runtime": "vercel-php@o.4.0"},
-        "comment.php": {"runtime": "vercel-php@o.4.0"},
-        "compte_gere.php": {"runtime": "vercel-php@o.4.0"},
-        "conseils.php": {"runtime": "vercel-php@o.4.0"},
-        "consommer.php": {"runtime": "vercel-php@o.4.0"},
-        "cotation.php": {"runtime": "vercel-php@o.4.0"},
-        "detail_1_citoyen.php": {"runtime": "vercel-php@o.4.0"},
-        "detail_1_entreprise.php": {"runtime": "vercel-php@o.4.0"},
-        "detail_1_etat.php": {"runtime": "vercel-php@o.4.0"},
-        "dette.php": {"runtime": "vercel-php@o.4.0"},
-        "entreprise_detail.php": {"runtime": "vercel-php@o.4.0"},
-        "etat_membre.php": {"runtime": "vercel-php@o.4.0"},
-        "formulaire.php": {"runtime": "vercel-php@o.4.0"},
-        "index.php": {"runtime": "vercel-php@o.4.0"},
-        "info-externe.php": {"runtime": "vercel-php@o.4.0"},
-        "info.php": {"runtime": "vercel-php@o.4.0"},
-        "info_besoin.php": {"runtime": "vercel-php@o.4.0"},
-        "info_cpte.php": {"runtime": "vercel-php@o.4.0"},
-        "info_etat.php": {"runtime": "vercel-php@o.4.0"},
-        "inscription.php": {"runtime": "vercel-php@o.4.0"},
-        "new_detail_1_citoyen.php": {"runtime": "vercel-php@o.4.0"},
-        "new_detail_1_entreprise.php": {"runtime": "vercel-php@o.4.0"},
-        "new_user_profile.php": {"runtime": "vercel-php@o.4.0"},
-        "niveau_vie.php": {"runtime": "vercel-php@o.4.0"},
-        "patron.php": {"runtime": "vercel-php@o.4.0"},
-        "possession_gere.php": {"runtime": "vercel-php@o.4.0"},
-        "possession_user.php": {"runtime": "vercel-php@o.4.0"},
-        "presentation.php": {"runtime": "vercel-php@o.4.0"},
-        "produire.php": {"runtime": "vercel-php@o.4.0"},
-        "produit_gere.php": {"runtime": "vercel-php@o.4.0"},
-        "regles.php": {"runtime": "vercel-php@o.4.0"},
-        "relation_etat.php": {"runtime": "vercel-php@o.4.0"},
-        "responsable.php": {"runtime": "vercel-php@o.4.0"},
-        "schema_bancaire.php": {"runtime": "vercel-php@o.4.0"},
-        "situ_eco_pays.php": {"runtime": "vercel-php@o.4.0"},
-        "stock_detail.php": {"runtime": "vercel-php@o.4.0"},
-        "stock_gere.php": {"runtime": "vercel-php@o.4.0"},
-        "systeme_eco.php": {"runtime": "vercel-php@o.4.0"},
-        "taux_change.php": {"runtime": "vercel-php@o.4.0"},
-        "taxe_import.php": {"runtime": "vercel-php@o.4.0"},
-        "titre.php": {"runtime": "vercel-php@o.4.0"},
-        "transaction.php": {"runtime": "vercel-php@o.4.0"},
-        "user_profile.php": {"runtime": "vercel-php@o.4.0"},
-        "verif.php": {"runtime": "vercel-php@o.4.0"},
-        "verifExterne.php": {"runtime": "vercel-php@o.4.0"},
-        "vosdonnees.php": {"runtime": "vercel-php@o.4.0"}
+        "a_propos.php": {"runtime": "now-php@1.0.0"},
+        "activite_1_etat.php": {"runtime": "now-php@1.0.0"},
+        "bourse.php": {"runtime": "now-php@1.0.0"},
+        "capacite.php": {"runtime": "now-php@1.0.0"},
+        "citoyen_detail.php": {"runtime": "now-php@1.0.0"},
+        "comment.php": {"runtime": "now-php@1.0.0"},
+        "compte_gere.php": {"runtime": "now-php@1.0.0"},
+        "conseils.php": {"runtime": "now-php@1.0.0"},
+        "consommer.php": {"runtime": "now-php@1.0.0"},
+        "cotation.php": {"runtime": "now-php@1.0.0"},
+        "detail_1_citoyen.php": {"runtime": "now-php@1.0.0"},
+        "detail_1_entreprise.php": {"runtime": "now-php@1.0.0"},
+        "detail_1_etat.php": {"runtime": "now-php@1.0.0"},
+        "dette.php": {"runtime": "now-php@1.0.0"},
+        "entreprise_detail.php": {"runtime": "now-php@1.0.0"},
+        "etat_membre.php": {"runtime": "now-php@1.0.0"},
+        "formulaire.php": {"runtime": "now-php@1.0.0"},
+        "index.php": {"runtime": "now-php@1.0.0"},
+        "info-externe.php": {"runtime": "now-php@1.0.0"},
+        "info.php": {"runtime": "now-php@1.0.0"},
+        "info_besoin.php": {"runtime": "now-php@1.0.0"},
+        "info_cpte.php": {"runtime": "now-php@1.0.0"},
+        "info_etat.php": {"runtime": "now-php@1.0.0"},
+        "inscription.php": {"runtime": "now-php@1.0.0"},
+        "new_detail_1_citoyen.php": {"runtime": "now-php@1.0.0"},
+        "new_detail_1_entreprise.php": {"runtime": "now-php@1.0.0"},
+        "new_user_profile.php": {"runtime": "now-php@1.0.0"},
+        "niveau_vie.php": {"runtime": "now-php@1.0.0"},
+        "patron.php": {"runtime": "now-php@1.0.0"},
+        "possession_gere.php": {"runtime": "now-php@1.0.0"},
+        "possession_user.php": {"runtime": "now-php@1.0.0"},
+        "presentation.php": {"runtime": "now-php@1.0.0"},
+        "produire.php": {"runtime": "now-php@1.0.0"},
+        "produit_gere.php": {"runtime": "now-php@1.0.0"},
+        "regles.php": {"runtime": "now-php@1.0.0"},
+        "relation_etat.php": {"runtime": "now-php@1.0.0"},
+        "responsable.php": {"runtime": "now-php@1.0.0"},
+        "schema_bancaire.php": {"runtime": "now-php@1.0.0"},
+        "situ_eco_pays.php": {"runtime": "now-php@1.0.0"},
+        "stock_detail.php": {"runtime": "now-php@1.0.0"},
+        "stock_gere.php": {"runtime": "now-php@1.0.0"},
+        "systeme_eco.php": {"runtime": "now-php@1.0.0"},
+        "taux_change.php": {"runtime": "now-php@1.0.0"},
+        "taxe_import.php": {"runtime": "now-php@1.0.0"},
+        "titre.php": {"runtime": "now-php@1.0.0"},
+        "transaction.php": {"runtime": "now-php@1.0.0"},
+        "user_profile.php": {"runtime": "now-php@1.0.0"},
+        "verif.php": {"runtime": "now-php@1.0.0"},
+        "verifExterne.php": {"runtime": "now-php@1.0.0"},
+        "vosdonnees.php": {"runtime": "now-php@1.0.0"}
     }
   }
